@@ -98,6 +98,12 @@ Used to retrieve the y coordinate for alignment.
 @return the localized object generic name.
 */
 	std::string Name ();
+/*!
+	@param xml the xmlDoc used to save the document.
+
+	Don't save anything, counters are automatic objects
+*/
+	xmlNodePtr Save (xmlDocPtr xml) const;
 
 // private methods
 	void Changed ();
